--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ x-common-django:
   env_file:
     - .env
   volumes:
-    # - './src:/usr/src/adma_geonode_project'
+    - './src:/usr/src/adma_geonode_project'
     - statics:/mnt/volumes/statics
     - geoserver-data-dir:/geoserver_data/data
     - backup-restore:/backup_restore
