--- a/adma_geo/Dockerfile
+++ b/adma_geo/Dockerfile
@@ -3,6 +3,7 @@ FROM python:3.10-slim-bullseye
 # Set environment variables
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
+ENV LD_LIBRARY_PATH="/usr/local/lib:$LD_LIBRARY_PATH"
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
@@ -18,7 +19,23 @@ RUN apt-get update && apt-get install -y \
     proj-data \
     proj-bin \
     libspatialindex-dev \
+    wget \
     && rm -rf /var/lib/apt/lists/*
+
+# Install SQLite 3.35+ from source (required for ChromaDB)
+RUN cd /tmp && \
+    wget https://www.sqlite.org/2024/sqlite-autoconf-3460000.tar.gz && \
+    tar xzf sqlite-autoconf-3460000.tar.gz && \
+    cd sqlite-autoconf-3460000 && \
+    ./configure --prefix=/usr/local && \
+    make && \
+    make install && \
+    cd / && \
+    rm -rf /tmp/sqlite-autoconf-3460000* && \
+    echo "/usr/local/lib" > /etc/ld.so.conf.d/sqlite3.conf && \
+    ldconfig && \
+    # Update Python to use new SQLite
+    export LD_LIBRARY_PATH="/usr/local/lib:$LD_LIBRARY_PATH"
 
 # Set work directory
 WORKDIR /app
