--- a/adma_geo/requirements.txt
+++ b/adma_geo/requirements.txt
@@ -11,3 +11,14 @@ crispy-bootstrap5>=0.7
 # Basic dependencies for spatial functionality
 requests>=2.28.0
 
+# Excel/Spreadsheet processing
+pandas>=2.0.0
+openpyxl>=3.1.0
+xlrd>=2.0.1
+
+# Vector database and embeddings
+chromadb>=0.4.15
+sentence-transformers>=2.2.2
+torch>=2.0.0
+numpy>=1.24.0
+
