--- a/adma_geo/nginx.conf
+++ b/adma_geo/nginx.conf
@@ -16,6 +16,26 @@ server {
         alias /var/www/media/;
     }
 
+    # GeoServer WMS proxy
+    location /wms {
+        proxy_pass http://geoserver:8080/geoserver/adma_geo/wms;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
+    }
+
+    # GeoServer REST API proxy
+    location /geoserver/ {
+        proxy_pass http://geoserver:8080/geoserver/;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
+    }
+
     location / {
         proxy_pass http://django;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
