--- a/adma_geo/requirements.txt
+++ b/adma_geo/requirements.txt
@@ -16,10 +16,6 @@ pandas>=2.0.0
 openpyxl>=3.1.0
 xlrd>=2.0.1
 
-# Vector database and embeddings
-chromadb>=0.4.15
-sentence-transformers>=2.2.2
-torch>=2.0.0
-numpy>=1.24.0
-openai>=1.0.0
+# NOTE: Vector database and embedding dependencies removed
+# Search now uses PostgreSQL text matching instead of semantic embeddings
 
