--- a/adma_geo/nginx.conf
+++ b/adma_geo/nginx.conf
@@ -1,47 +1,53 @@
-upstream django {
-    server django:8000;
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 80;
-    server_name localhost;
-
-    client_max_body_size 500M;
-
-    location /static/ {
-        alias /var/www/static/;
+http {
+    upstream django {
+        server django:8000;
     }
 
-    location /media/ {
-        alias /var/www/media/;
-    }
+    server {
+        listen 80;
+        server_name localhost;
 
-    # GeoServer WMS proxy
-    location /wms {
-        proxy_pass http://geoserver:8080/geoserver/adma_geo/wms;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-        proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
-    }
+        client_max_body_size 500M;
 
-    # GeoServer REST API proxy
-    location /geoserver/ {
-        proxy_pass http://geoserver:8080/geoserver/;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-        proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
-    }
+        location /static/ {
+            alias /var/www/static/;
+        }
 
-    location / {
-        proxy_pass http://django;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-        proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
+        location /media/ {
+            alias /var/www/media/;
+        }
+
+        # GeoServer WMS proxy
+        location /wms {
+            proxy_pass http://geoserver:8080/geoserver/adma_geo/wms;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+        }
+
+        # GeoServer REST API proxy
+        location /geoserver/ {
+            proxy_pass http://geoserver:8080/geoserver/;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+        }
+
+        location / {
+            proxy_pass http://django;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+        }
     }
 }
