--- a/adma_geo/nginx.conf
+++ b/adma_geo/nginx.conf
@@ -41,6 +41,26 @@ http {
             proxy_connect_timeout 75s;
         }
 
+        # Handle index.html specifically (from Apache)
+        location = /index.html {
+            proxy_pass http://django/;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+        }
+
+        # Handle index.htm as well (in case)
+        location = /index.htm {
+            proxy_pass http://django/;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header Host $host;
+            proxy_redirect off;
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+        }
+
         location / {
             proxy_pass http://django;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
