--- a/adma_geo/nginx-adma.conf
+++ b/adma_geo/nginx-adma.conf
@@ -9,9 +9,14 @@ http {
 
     server {
         listen 80;
-        server_name localhost;
+        server_name localhost adma.unl.edu;
 
         client_max_body_size 500M;
+
+        # Security headers for HTTPS/HTTP compatibility
+        add_header X-Frame-Options DENY;
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
 
         location /static/ {
             alias /var/www/static/;
@@ -46,6 +51,7 @@ http {
             proxy_pass http://django/;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_redirect off;
             proxy_read_timeout 300s;
             proxy_connect_timeout 75s;
@@ -56,6 +62,7 @@ http {
             proxy_pass http://django/;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_redirect off;
             proxy_read_timeout 300s;
             proxy_connect_timeout 75s;
@@ -66,6 +73,7 @@ http {
             proxy_pass http://django;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
             proxy_redirect off;
             proxy_read_timeout 300s;
             proxy_connect_timeout 75s;
