--- a/adma_geo/docker-compose-adma.yml
+++ b/adma_geo/docker-compose-adma.yml
@@ -42,7 +42,7 @@ services:
       - adma_geo_media:/app/media
       - adma_geo_static:/app/staticfiles
     ports:
-      - "8000:8000"
+      - "8001:8000"
     environment:
       DEBUG: "True"
       SECRET_KEY: "django-secret-key-for-development"
@@ -54,6 +54,10 @@ services:
       REDIS_URL: redis://redis:6379/0
       CELERY_BROKER_URL: redis://redis:6379/0
       CELERY_RESULT_BACKEND: redis://redis:6379/0
+      # GeoServer connection settings
+      GEOSERVER_URL: http://geoserver:8080/geoserver
+      GEOSERVER_ADMIN_USER: admin
+      GEOSERVER_ADMIN_PASSWORD: geoserver123
     depends_on:
       db:
         condition: service_healthy
@@ -81,6 +85,10 @@ services:
       REDIS_URL: redis://redis:6379/0
       CELERY_BROKER_URL: redis://redis:6379/0
       CELERY_RESULT_BACKEND: redis://redis:6379/0
+      # GeoServer connection settings
+      GEOSERVER_URL: http://geoserver:8080/geoserver
+      GEOSERVER_ADMIN_USER: admin
+      GEOSERVER_ADMIN_PASSWORD: geoserver123
     depends_on:
       db:
         condition: service_healthy
